try to get wxwidgets driver in plplot, at least under unix!

--- a/.travis.yml
+++ b/.travis.yml
@@ -93,6 +93,7 @@ install:
 
     # plplot
     - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then export APT_PACKAGES="${APT_PACKAGES} libplplot-dev"; fi
+    - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then export APT_PACKAGES="${APT_PACKAGES} plplot-driver-wxwidgets"; fi
     - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then export BREW_PACKAGES="${BREW_PACKAGES} plplot"; fi
 
     ##
