--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -544,9 +544,9 @@ if(PLPLOT_FOUND)
          endif (X11_FOUND)
          if (NOT HAVE_PLPLOT_WXWIDGETS_DRIVER AND NOT HAVE_PLPLOT_X11_DRIVER ) 
            if (wxWidgets_FOUND) 
-             message(FATAL_ERROR "PlPlot was compiled without wxWidgets driver, aborting. See use of -DX11 or -DINTERACTIVE_GRAPHICS=OFF .")
+             message(FATAL_ERROR "PlPlot was compiled without wxwidgets driver, aborting. See use of -DX11 or -DINTERACTIVE_GRAPHICS=OFF .")
            else (wxWidgets_FOUND)
-             message(FATAL_ERROR "PlPlot was compiled without wxwin driver, aborting. Consider using wxWidgets. See use of -DX11 or -DINTERACTIVE_GRAPHICS=OFF .")
+             message(FATAL_ERROR "PlPlot was compiled without xwin driver, aborting. Consider using wxWidgets. See use of -DX11 or -DINTERACTIVE_GRAPHICS=OFF .")
            endif (wxWidgets_FOUND)
          endif (NOT HAVE_PLPLOT_WXWIDGETS_DRIVER)
       else (CYGWIN OR NOT WIN32)  #WIN32: check wingcc
