--- a/.travis.yml
+++ b/.travis.yml
@@ -3,34 +3,34 @@ language: cpp
 # TODO: investigate why MINI builds timeout on icc, while FULL ones not?!
 matrix:
   include:
-##    - os: linux
-##      env: COMPILER=icc   CMAKE_BUILD_TYPE=Debug    DEPS=MINI
 #    - os: linux
-#      env: COMPILER=gcc   CMAKE_BUILD_TYPE=Debug    DEPS=MINI  ANTLR=yes
-#    - os: osx
-#      osx_image: xcode11.3
-#      env: COMPILER=clang CMAKE_BUILD_TYPE=Debug    DEPS=MINI
-#
-##    - os: linux
-##      env: COMPILER=icc   CMAKE_BUILD_TYPE=Debug    DEPS=FULL
+#      env: COMPILER=icc   CMAKE_BUILD_TYPE=Debug    DEPS=MINI
+    - os: linux
+      env: COMPILER=gcc   CMAKE_BUILD_TYPE=Debug    DEPS=MINI  ANTLR=yes
+    - os: osx
+      osx_image: xcode11.3
+      env: COMPILER=clang CMAKE_BUILD_TYPE=Debug    DEPS=MINI
+
 #    - os: linux
-#      env: COMPILER=gcc   CMAKE_BUILD_TYPE=Debug    DEPS=FULL  CODECOV=yes
-#    - os: osx
-#      osx_image: xcode11.3
-#      env: COMPILER=clang CMAKE_BUILD_TYPE=Debug    DEPS=FULL
-#
-##    - os: linux
-##      env: COMPILER=icc   CMAKE_BUILD_TYPE=Release  DEPS=MINI
+#      env: COMPILER=icc   CMAKE_BUILD_TYPE=Debug    DEPS=FULL
+    - os: linux
+      env: COMPILER=gcc   CMAKE_BUILD_TYPE=Debug    DEPS=FULL  CODECOV=yes
+    - os: osx
+      osx_image: xcode11.3
+      env: COMPILER=clang CMAKE_BUILD_TYPE=Debug    DEPS=FULL
+
 #    - os: linux
-#      env: COMPILER=gcc   CMAKE_BUILD_TYPE=Release  DEPS=MINI
-#    - os: osx
-#      osx_image: xcode11.3
-#      env: COMPILER=clang CMAKE_BUILD_TYPE=Release  DEPS=MINI
-#
+#      env: COMPILER=icc   CMAKE_BUILD_TYPE=Release  DEPS=MINI
+    - os: linux
+      env: COMPILER=gcc   CMAKE_BUILD_TYPE=Release  DEPS=MINI
+    - os: osx
+      osx_image: xcode11.3
+      env: COMPILER=clang CMAKE_BUILD_TYPE=Release  DEPS=MINI
+
+    - os: linux
+      env: COMPILER=gcc   CMAKE_BUILD_TYPE=Release  DEPS=FULL
 #    - os: linux
-#      env: COMPILER=gcc   CMAKE_BUILD_TYPE=Release  DEPS=FULL
-##    - os: linux
-##      env: COMPILER=icc   CMAKE_BUILD_TYPE=Release  DEPS=FULL
+#      env: COMPILER=icc   CMAKE_BUILD_TYPE=Release  DEPS=FULL
     - os: osx
       osx_image: xcode11.3
       env: COMPILER=clang CMAKE_BUILD_TYPE=Release  DEPS=FULL
