--- a/obsolete/config.h.in
+++ b/obsolete/config.h.in
@@ -164,10 +164,10 @@
 #undef USE_HDF5
 
 /* Define if you want to use LIBPROJ4 */
-#undef USE_LIBPROJ4
+#undef USE_LIBPROJ
 
 /* Define if you want to use new LIBPROJ4 */
-#undef USE_LIBPROJ4_NEW
+#undef USE_LIBPROJ_NEW
 
 /* Define if you want to use GraphicsMagick */
 #undef USE_MAGICK
