--- a/obsolete/configure.in
+++ b/obsolete/configure.in
@@ -778,13 +778,13 @@ if test "x$with_libproj4" != "xno"; then
     LIBS="$LIBS -lproj4"
   fi
 
-  AC_CHECK_LIB(proj4, proj_init, [AC_DEFINE([USE_LIBPROJ4], [1], 
+  AC_CHECK_LIB(proj4, proj_init, [AC_DEFINE([USE_LIBPROJ], [1], 
   [Define if you want to use LIBPROJ4])], [])
 
-  AC_CHECK_LIB(proj4, proj_init, [AC_DEFINE([USE_LIBPROJ4_NEW], [1], 
+  AC_CHECK_LIB(proj4, proj_init, [AC_DEFINE([USE_LIBPROJ_NEW], [1], 
   [Define if you want to use new LIBPROJ4])], [
 
-     AC_CHECK_LIB(proj4, pj_init, [AC_DEFINE([USE_LIBPROJ4], [1], 
+     AC_CHECK_LIB(proj4, pj_init, [AC_DEFINE([USE_LIBPROJ], [1], 
      [Define if you want to use LIBPROJ4])], [
        echo ""
        echo "Error! LIBPROJ4 is required but was not found"
