say if x11 is present

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1247,11 +1247,11 @@ set(SHAPELIB_LIBRARIES ${SHAPELIB_LIBRARIES})
 module(SHAPELIB   "SHAPELIB      ")
 set(EXPAT_LIBRARIES ${EXPAT_LIBRARIES})
 module(EXPAT     "EXPAT         ")
-if (INTERACTIVE_GRAPHICS AND NOT wxWidgets_FOUND) 
+if (INTERACTIVE_GRAPHICS) 
 if( CYGWIN OR NOT WIN32  )
   module(X11     "Xlib          ")
 endif( CYGWIN OR NOT WIN32)
-endif ( INTERACTIVE_GRAPHICS AND NOT wxWidgets_FOUND)
+endif (INTERACTIVE_GRAPHICS)
 module(PNGLIB    "libpng        ")
 message("")
 message(STATUS "Mandatory modules")
