remove travis.yml / fix if statement

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
         echo "::set-output name=matrix::$matrix"
   build-linux-macos:
     runs-on: ${{ matrix.os }}
-    if: matrix.os != 'windows-latest'
+    if: ${{ matrix.os != 'windows-latest' }}
     needs: prelude
     strategy:
       fail-fast: false
@@ -46,7 +46,7 @@ jobs:
           .ci/build_gdl.sh check || exit 0
   build-windows:
     runs-on: ${{ matrix.os }}
-    if: matrix.os == 'windows-latest'
+    if: ${{ matrix.os == 'windows-latest' }}
     needs: prelude
     strategy:
       fail-fast: false
