--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,6 +43,8 @@ jobs:
       Configuration: ${{ matrix.configuration }}
       ROOT_DIR: ${{ github.workspace }}/..
     steps:
+      - name: Checkout GDL
+        uses: actions/checkout@v2
       - name: Install Dependencies
         run: |
           .ci/build_gdl.sh prep
