--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -91,13 +91,13 @@ jobs:
       #    path: D:\a\gdl\mingw
       #    key: msys2-packages-${{ matrix.arch }}-${{ matrix.deps }}
       - name: Check Version of Latest GDL Workbench
-        if: matrix.arch == 'x86_64' && matrix.os == 'windows-latest'
+        if: matrix.arch == 'x86_64'
         id: gdl_workbench
         uses: pozetroninc/github-action-get-latest-release@master
         with:
           repository: gnudatalanguage/gdlde
       - name: Install MSMPI
-        if: matrix.deps == 'full-msmpi' && matrix.os == 'windows-latest'
+        if: matrix.deps == 'full-msmpi'
         run: |
           Invoke-WebRequest -Uri https://download.microsoft.com/download/a/5/2/a5207ca5-1203-491a-8fb8-906fd68ae623/msmpisetup.exe -OutFile MSMpiSetup.exe
           .\MSMpiSetup.exe -unattend
