--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,7 +51,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Install Dependencies
         run: |
-          .ci/build_gdl.sh prepS
+          .ci/build_gdl.sh prep
       - name: Build GDL
         run: |
           .ci/build_gdl.sh build
